--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,8 +1,20 @@
 /**
 * 全局样式
 */
+@import './icon.less';
 
 body{
-  background-color: pink;
-  
+  background-color: #f5f7f9;
+}
+.app-nav-bar{
+  background-color: #3296fa !important;
+  .van-nav-bar__title{
+    color:#fff;
+  }
+  .van-nav-bar__text{
+    color: #fff;
+  }
+  .van-icon{
+    color: #fff;
+  }
 }
